--- a/public/css/elements/button.sass
+++ b/public/css/elements/button.sass
@@ -10,7 +10,7 @@
   display: block
   background: transparent
   width: 100%
-  &--blue
+  &--color
     color: $colorWhite
     background: $colorTheme
     border: none
