SWP-848 - Post backo's fixes

--- a/views/partials/register-popup.html.twig
+++ b/views/partials/register-popup.html.twig
@@ -2,7 +2,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="loginPopupTitle">Don't have account yet? Create one here:</h5>
+        <h4 class="modal-title" id="loginPopupTitle">Don't have account yet? Create one here:</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -33,7 +33,7 @@
 				</div>           
 			</form>
 
-			<div id="registrationResult"></div>
+			<div id="registrationResult" class="notification"></div>
 
 		</div>
 
