--- a/views/partials/user-profile.html.twig
+++ b/views/partials/user-profile.html.twig
@@ -2,7 +2,7 @@
   	<div class="modal-dialog" role="document">
     	<div class="modal-content">
       		<div class="modal-header">
-        		<h5 class="modal-title" id="userProfileTitle">Edit Profile</h5>
+        		<h4 class="modal-title" id="userProfileTitle">Edit Profile</h4>
         		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
           		<span aria-hidden="true">&times;</span>
         		</button>
@@ -52,7 +52,7 @@
 
 				</form>	
 
-				<div id="editProfileResult"></div>			
+				<div id="editProfileResult" class="notification"></div>			
 
 			</div>
 		</div>
