--- a/views/partials/login-popup.html.twig
+++ b/views/partials/login-popup.html.twig
@@ -2,7 +2,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="loginPopupTitle">{{ 'user.popup.loginHere'|trans|desc('Already have acoount? Login here:') }}</h5>
+        <h4 class="modal-title" id="loginPopupTitle">{{ 'user.popup.loginHere'|trans|desc('Already have acoount? Login here:') }}</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -40,7 +40,7 @@
 				</div>
 			</form>
 
-			<div id="userAuth"></div>
+			<div id="userAuth" class="notification"></div>
 
 		</div>
 
