--- a/public/css/elements/article.sass
+++ b/public/css/elements/article.sass
@@ -36,7 +36,7 @@
       content: " "
       width: 69px
       height: 53px
-      background: url("../img/quote-blue.svg")
+      background: url("../img/quote-green.svg")
     p
       font-size: 2.8rem
       font-weight: 300
