--- a/public/css/elements/articleListSmall.sass
+++ b/public/css/elements/articleListSmall.sass
@@ -14,12 +14,8 @@
     margin-bottom: 10px
     +lg
       margin-top: 0px
-      margin-left: 110px
     &:hover a
       color: $colorGrey
-  .articleMetadata
-    +lg
-      margin-left: 110px
 
 .articleListSmall--latestNews
   .articleListSmall__image
@@ -36,7 +32,8 @@
       +lg
         width: auto
   .articleListSmall__headline
-    margin-top: 10px
+    margin-top: 0px
+    +md
+      margin-top: 10px
     +lg
       margin-top: 0px
-      margin-left: 110px
