--- a/public/css/elements/bootstrapOverwrite.sass
+++ b/public/css/elements/bootstrapOverwrite.sass
@@ -1,3 +1,7 @@
+a:hover, a:focus
+  color: inherit
+  text-decoration: none
+
 .modal
   input
     width: 100%
@@ -26,3 +30,18 @@
 
 .modal-backdrop
   background-color: rgba(37, 45, 49, 0.8)
+
+blockquote
+  padding: 0px
+  margin: 0px
+  font-size: 1.8rem
+  border-left: none
+
+blockquote footer, blockquote small, blockquote .small
+  display: block
+  font-size: 1.6rem
+  line-height: normal
+  color: $colorWhite
+
+blockquote footer:before, blockquote small:before, blockquote .small:before
+  display: none
