--- a/public/css/elements/editorialComment.sass
+++ b/public/css/elements/editorialComment.sass
@@ -1,29 +1,46 @@
 .editorialComment
+  position: relative
   background-color: $colorTheme
   padding: 40px 30px
   color: $colorWhite
+  overflow: hidden
   p
     font-size: 1.8rem
     color: $colorWhite
   a
     color: $colorWhite
+  &:after
+    position: absolute
+    top: -10px
+    right: 20px
+    display: block
+    content: url("../img/quote-green.svg")
+    width: 96px
+    height: 74px
   .editorialComment__headline
+    position: relative
     font-family: $fontSerif
     font-size: 2rem
     font-weight: 800
     margin: 0px
     margin-bottom: 20px
+    z-index: 2
   blockquote
+    position: relative
     font-style: italic
     margin: 0px
     font-weight: 300
+    z-index: 2
   .editorialComment__name
+    font-size: 1.6rem
     font-weight: 400
     font-style: normal
     display: block
   .editorialComment__article
+    font-family: $fontSansSerif
+    font-size: 1.6rem
     color: #dcefc2
-    margin-left: 20px
+    margin-left: 12px
     a
       color: #dcefc2
       border-bottom: 1px dotted #dcefc2
