--- a/public/css/elements/topBar.sass
+++ b/public/css/elements/topBar.sass
@@ -13,6 +13,7 @@
     ul
       text-align: left
       list-style: none
+      margin: 11px 0px
       padding-left: 0px
       li
         display: inline-block
