--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{# block logo %}
-        <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
-          <a class="header__logo header__logo--section" href="{{ url('home') }}"><img src="{{ asset('theme/img/logo.svg') }}"></a>
-          <h3 class="header__sectionName marginTop10">{{ gimme.route.name|capitalize }}</h3>
-        </div>
-{% endblock #}
+{% block logo %}
+    <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
+      <a class="header__logo header__logo--section" href="{{ url('home') }}"><img src="/public/img/logo.png"></a>
+      <h3 class="header__sectionName marginTop10">{{ gimme.route.name|capitalize }}</h3>
+    </div>
+{% endblock %}
 
 {% block body %}
 
@@ -15,91 +15,84 @@
       <div class="col-md-9 col-sm-12 col-xs-12">
 
         {# Setup list and pagination parameters #}
-            {% set defaultItemsPerPage, itemsPerPage, currentPage = 9, 9, app.request.get('page', 1) %}
+        {% set defaultItemsPerPage, itemsPerPage, currentPage = 9, 9, app.request.get('page', 1) %}
 
-            {% set start = ((currentPage-1) * itemsPerPage) +1 %}
+        {% set start = ((currentPage-1) * itemsPerPage) +1 %}
 
-              {% if currentPage == 1 %}
-                  {% set itemsPerPage = 10 %}
-                    {% set start = 0 %}
-              {% endif %}
+        {% if currentPage == 1 %}
+          {% set itemsPerPage = 10 %}
+          {% set start = 0 %}
+        {% endif %}
 
-            {# List all articles from current route and limit them to `itemsPerPage` value starting from `start` value #}
-            {% cache 'newsList'~app.environment~currentPage {time: 600} %}
-              {% gimmelist article from articles|start(start)|limit(itemsPerPage)|order('publishedAt','desc') %}
+        {# List all articles from current route and limit them to `itemsPerPage` value starting from `start` value #}
+        {% cache 'newsList'~app.environment~currentPage {time: 600} %}
+        {% gimmelist article from articles|start(start)|limit(itemsPerPage)|order('publishedAt','desc') %}
 
-            {% if loop.first and currentPage == 1 %}
+        {% if loop.first and currentPage == 1 %}
 
-              {% cache 'newsArticle' {gen: article} %}
+          {% cache 'newsArticle' {gen: article} %}
+          {% include 'partials/mainArticleSection.html.twig' with {'class' : ''} %}
+          {% endcache %}
 
-              {% include 'partials/mainArticleSection.html.twig' with {'class' : ''} %}
+          <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12 pull-right">
+              <div class="articleGrid row">
+            
+          {% else %}
 
-              {% endcache %}
+          {% if loop.first %}
 
-              <div class="row">
-                <div class="col-md-12 col-sm-12 col-xs-12 pull-right">
-                  <div class="articleGrid row">
-            {% else %}
+          <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12 pull-right">
+              <div class="articleGrid row">
 
-              {% if loop.first %}
+          {% endif %}
 
-                <div class="row">
-                  <div class="col-md-12 col-sm-12 col-xs-12 pull-right">
-                    <div class="articleGrid row">
+          {% cache 'newsArticle' {gen: article} %}
+          {% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--threeColumns col-md-4 col-sm-6 col-xs-12'} %}
+          {% endcache %}
 
-              {% endif %}
-
-
-              {% cache 'newsArticle' {gen: article} %}
-
-              {% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--threeColumns col-md-4 col-sm-6 col-xs-12'} %}
-
-
-              {% endcache %}
-            {% endif %}
-                {# Render pagination only at end of list #}
-                {% if loop.last  %}
-                    </div>
-                  </div>
-
-
-                    {#
-                        Use provided by default pagination template
-
-                         Parameters:
-                         * currentFilters (array) : associative array that contains the current route-arguments
-                         * currentPage (int) : the current page you are in
-                         * paginationPath (Meta|string) : the route name (or supported by router Meta object) to use for links
-                         * lastPage (int) : represents the total number of existing pages
-                         * showAlwaysFirstAndLast (bool) : Always show first and last link (just disabled)
-                     #}
-                     {% include 'partials/pagination.html.twig' with {
-                         currentFilters: {}|merge(app.request.query.all()),
-                         currentPage: currentPage,
-                         paginationPath: gimme.route,
-                         lastPage: (loop.totalLength/defaultItemsPerPage)|round()
-                     } only %}
-
-                 {% endif %}
-
-             {% endgimmelist %}
-             {% endcache %}
-
+          {% endif %}
+          
+          {# Render pagination only at end of list #}
+          {% if loop.last  %}
+          </div>
         </div>
-      </div>
 
-      <div class="col-xs-12 col-sm-12 col-md-3">
+        {#
+          Use provided by default pagination template
+          Parameters:
+          * currentFilters (array) : associative array that contains the current route-arguments
+          * currentPage (int) : the current page you are in
+          * paginationPath (Meta|string) : the route name (or supported by router Meta object) to use for links
+          * lastPage (int) : represents the total number of existing pages
+          * showAlwaysFirstAndLast (bool) : Always show first and last link (just disabled)
+        #}
+ 
+        {% include 'partials/pagination.html.twig' with {
+          currentFilters: {}|merge(app.request.query.all()),
+          currentPage: currentPage,
+          paginationPath: gimme.route,
+          lastPage: (loop.totalLength/defaultItemsPerPage)|round()
+        } only %}
 
-        {% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
+        {% endif %}
 
-        {% container 'frontSidebar' %}
+      {% endgimmelist %}
+    {% endcache %}
 
-        {% endcontainer %}
-
-      </div>
     </div>
+  </div>
 
-  </main>
+  <div class="col-xs-12 col-sm-12 col-md-3">
 
+    {% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
+    {% container 'frontSidebar' %}
+    {% endcontainer %}
+
+  </div>
+</div>
+
+</main>
 
 {% endblock %}
