feature: theme settings and initial content generated on install

--- a/public/css/elements/editorialComment.sass
+++ b/public/css/elements/editorialComment.sass
@@ -17,6 +17,7 @@
     content: url("../img/quote-green.svg")
     width: 96px
     height: 74px
+    opacity: .5
   .editorialComment__headline
     position: relative
     font-family: $fontSerif
