--- a/public/css/elements/trendingTopics.sass
+++ b/public/css/elements/trendingTopics.sass
@@ -9,7 +9,7 @@
     &.trendingTopics__items
       li:first-child
         padding: 10px 15px
-        background: #98b96a
+        background: $colorTheme
         color: $colorWhite
     li
       font-size: 1.8rem
