--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -234,7 +234,7 @@
     <div class="row">
 
       <div class="footer__logo col-md-3 col-sm-3 col-xs-12">
-        <a href="{{ url('home') }}"><img src="{{ themeLogo(asset('/public/img/logo-white.png')) }}"></a>
+        <a href="{{ url('homepage') }}"><img src="{{ themeLogo(asset('/public/img/logo-white.png')) }}"></a>
       </div>
 
 {% container 'footerNav' %}
