--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -25,7 +25,7 @@
         {% endif %}
 
         {# List all articles from current route and limit them to `itemsPerPage` value starting from `start` value #}
-        {% cache 'newsList'~app.environment~currentPage {time: 600} %}
+        {% cache 'newsList'~app.environment~currentPage~gimme.route.slug {time: 600} %}
         {% gimmelist article from articles|start(start)|limit(itemsPerPage)|order('publishedAt','desc') %}
 
         {% if loop.first and currentPage == 1 %}
