--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
 
 	<main class="container">
+
 		<div class="row">
 			<div class="col-md-9 col-sm-12 col-xs-12">
 				<div class="row">
@@ -47,6 +48,10 @@
 			<div class="col-xs-12 col-sm-12 col-md-3">
 
 				{% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
+
+				{% if themeSetting('sidebar_switch') %}
+					<h1>It works and is set to true</h1>
+				{% endif %}
 
 				{% container 'frontSidebar' %}
 
