--- a/views/partials/articleListSmall__item.html.twig
+++ b/views/partials/articleListSmall__item.html.twig
@@ -21,6 +21,12 @@
 
                 <h4 class="articleListSmall__headline"><a href="{{ url(article) }}">{{ article.title }}</a></h4>
                 <div class="articleMetadata">
-                  <span class="articleMetadata__byline">by <a href="{{ url(article) }}">{{ article.metadata.byline }}</a></span>
+                {% if article.authors %}
+                  {% for author in article.authors %}
+                  <span class="articleMetadata__byline">by <a href="#">{{ author.name }}</a></span>
+                  {% endfor %}
+                {% elseif article.metadata.byline %}
+                <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
+                {% endif %}
                 </div>
               </article>
