--- a/views/partials/mainArticle.html.twig
+++ b/views/partials/mainArticle.html.twig
@@ -1,5 +1,4 @@
 <article class="mainArticle {{class}}">
-
             <figure class="mainArticle__image {% if image =='small' %}mainArticle__image--small{% endif %} ">
 
 {% set imgCaption = "" %}
@@ -52,9 +51,15 @@
             <div class="mainArticle__teaser">
               <p>{{ article.lead|striptags|safeTruncate(200,"...") }}</p>
             </div>
-          
+           
             <div class="articleMetadata">
-              <span class="articleMetadata__byline">by <a href="#">{{article.metadata.byline}}</a></span>
+              {% if article.authors %}
+                {% for author in article.authors %}
+                <span class="articleMetadata__byline">by <a href="#">{{ author.name }}</a></span>
+                {% endfor %}
+              {% elseif article.metadata.byline %}
+              <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
+              {% endif %}
               <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
               <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
             </div>
