--- a/views/partials/mainArticleList.html.twig
+++ b/views/partials/mainArticleList.html.twig
@@ -58,7 +58,13 @@
             </div>
           {% endif %}
             <div class="articleMetadata">
-              <span class="articleMetadata__byline articleMetadata__byline--white">by <a href="#">{{article.metadata.byline}}</a></span>
+                {% if article.authors %}
+                  {% for author in article.authors %}
+                  <span class="articleMetadata__byline articleMetadata__byline--white">by <a href="#">{{ author.name }}</a></span>
+                  {% endfor %}
+                {% elseif article.metadata.byline %}
+                <span class="articleMetadata__byline articleMetadata__byline--white">by <a href="#">{{ article.metadata.byline }}</a></span>
+                {% endif %}
               <a class="articleMetadata__shares articleMetadata__info articleMetadata__info--white" href="#">240</a>
               <a class="articleMetadata__comments articleMetadata__info articleMetadata__info--white" href="#">20</a>
             </div>
