--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -18,7 +18,13 @@
             </div>
           
             <div class="articleMetadata">
-              <span class="articleMetadata__byline">by <a href="#">{{article.metadata.byline}}</a></span>
+              {% if article.authors %}
+                {% for author in article.authors %}
+                <span class="articleMetadata__byline">by <a href="#">{{ author.name }}</a></span>
+                {% endfor %}
+              {% elseif article.metadata.byline %}
+              <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
+              {% endif %}
               <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
               <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
             </div>
