--- a/views/partials/opinionsItem--small.html.twig
+++ b/views/partials/opinionsItem--small.html.twig
@@ -5,7 +5,13 @@
               </figure>
             </a>
             <div class="articleMetadata">
-              <span class="articleMetadata__byline"><a href="{{url(article)}}">{{ article.metadata.byline }}</a></span>
+            {% if article.authors %}
+              {% for author in article.authors %}
+              <span class="articleMetadata__byline">by <a href="#">{{ author.name }}</a></span>
+              {% endfor %}
+            {% elseif article.metadata.byline %}
+            <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
+            {% endif %}
             </div>
             <a href="{{ url(article) }}">
               <h3 class="opinionsItem__headline opinionsItem__headline--small">{{ article.title }}</h3>
