--- a/views/partials/opinionsItem.html.twig
+++ b/views/partials/opinionsItem.html.twig
@@ -3,9 +3,15 @@
               <figure>
                 <img src="{{ asset('theme/img/article_img/140x140.png') }}">
               </figure>
-              <span class="opinions__author">
-               {{article.metadata.byline}}
-              </span>
+
+              {% if article.authors %}
+                {% for author in article.authors %}
+                <span class="opinions__author">by <a href="#">{{ author.name }}</a></span>
+                {% endfor %}
+              {% elseif article.metadata.byline %}
+              <span class="opinions__author">by <a href="#">{{ article.metadata.byline }}</a></span>
+              {% endif %}
+
             </a>
             <a href="{{url(article)}}">
               <h3 class="opinionsItem__headline">{{article.title}}</h3>
