--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -169,7 +169,7 @@
 
         {% block logo %}
         <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
-          <a class="header__logo" href="{{ url('home') }}"><img src="{{ themeLogo(asset('/public/img/logo.png')) }}"></a>
+          <a class="header__logo" href="/"><img src="{{ themeLogo(asset('/public/img/logo.png')) }}"></a>
         </div>
         {% endblock %}
 
