--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -2,7 +2,7 @@
 
 {% block logo %}
     <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
-      <a class="header__logo header__logo--section" href="{{ url('home') }}"><img src="/public/img/logo.png"></a>
+      <a class="header__logo header__logo--section" href="/"><img src="/public/img/logo.png"></a>
       <h3 class="header__sectionName marginTop10">{{ gimme.route.name|capitalize }}</h3>
     </div>
 {% endblock %}
