--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -15,17 +15,17 @@
       display: block
 
   .mainArticle__image
-    padding-bottom: 51%
+    // padding-bottom: 51%
     z-index: 1
-    height: 0px
+    // height: 0px
     margin: 0px -15px
     +sm
-      padding-bottom: 48.4%
+      // padding-bottom: 48.4%
       margin: 0px
     &--small
-      padding-bottom: 65.1%
+      // padding-bottom: 65.1%
       +sm
-        padding-bottom: 62.3%
+        // padding-bottom: 62.3%
     img
       width: 100%
       height: auto
