--- a/views/partials/opinionsItem.html.twig
+++ b/views/partials/opinionsItem.html.twig
@@ -1,3 +1,4 @@
+{% cache 'opinionItem'~class {gen: article} %}
 <article class="opinionsItem {{class}}">
             <a class="opinionsItem__image" href="{{url(article)}}">
               <figure>
@@ -22,3 +23,4 @@
                     {{ article.lead|striptags|safeTruncate(200,"...") }}
                   {%endif%}</p>
           </article>
+{% endcache %}
