--- a/views/partials/mainArticleList.html.twig
+++ b/views/partials/mainArticleList.html.twig
@@ -1,3 +1,4 @@
+{% cache 'mainArticleList'~class {gen: article} %}
 <article class="mainArticleList {{class}}">
 
             <figure class="mainArticleList__image {% if image =='small' %}mainArticleList__image--small{% endif %} ">
@@ -70,3 +71,4 @@
             </div>
           </div>
         </article>
+{% endcache %}
