--- a/public/css/elements/gallery.sass
+++ b/public/css/elements/gallery.sass
@@ -43,3 +43,6 @@
     font-size: 3.2rem
     font-weight: 900
     margin: 12px 0px
+  &__breakingNews
+    .gallery__headline
+      font-size: 3.4rem
