--- a/views/trending.html.twig
+++ b/views/trending.html.twig
@@ -5,7 +5,7 @@
   <main class="container">
     <div class="row">
 
-      {% set trendingTopic = app.request.get('topic')|toUpperCase %}
+      {% set trendingTopic = app.request.get('topic') %}
 
       <div class="col-md-9 col-sm-12 col-xs-12">
         <div class="row">
@@ -24,7 +24,6 @@
               {% endif %}
 
             {# List all articles from current route and limit them to `itemsPerPage` value starting from `start` value #}
-            {% cache 'trendingList'~app.environment~currentPage {time: 600} %}
 
               {% gimmelist article from articles|start(start)|limit(itemsPerPage)|order('publishedAt','desc') with {keywords: [trendingTopic]} %}
 
@@ -66,7 +65,6 @@
                  {% endif %}
 
              {% endgimmelist %}
-             {% endcache %}
 
         </div>
       </div>
