--- a/public/css/elements/authorBox.sass
+++ b/public/css/elements/authorBox.sass
@@ -1,4 +1,28 @@
 .authorBox
   color: #fff
   background-color: $colorTheme
-  padding: 40px 30px
+  padding: 20px 30px
+
+.authorBox__headline
+  font-family: $fontSerif
+  font-size: 2rem
+  font-weight: 800
+  margin-top: 0px
+
+.authorBox__wrap
+  text-align: center
+
+.authorBox__image
+  img
+    max-width: 100px
+    border-radius: 100%
+    overflow: hidden
+
+.authorBox__authorName
+  font-family: $fontRegular
+  font-size: 2.1rem
+  font-weight: 700
+  letter-spacing: 0.2px
+
+.authorBox__authorBio
+  color: $colorWhite
