--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -73,18 +73,7 @@
 				{% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
 
 				{% if themeSetting('sidebar_switch') %}
-					{% gimmelist author from authors|limit(1) with { role: ["featured"] } %}
-					<div class="authorBox">
-						<h3 class="authorBox__headline">Featured author</h3>
-						<div class="authorBox__wrap">       
-							<figure class="authorBox__image"><a href="{{ url(author.name) }}"><img src="{{ author.avatarUrl }}"></a></figure>
-							<div class="authorBox__info">
-								<h4 class="authorBox__authorName">{{ author.name }}</h4>
-								<p class="authorBox__authorBio">{{ author.biography }}</p>
-							</div>
-						</div>
-            		</div>
-					{% endgimmelist %}
+					{% include 'partials/featured-author.html.twig'  %}
 				{% endif %}
 
 				{% container 'frontSidebar' %}
