--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -22,7 +22,7 @@
             <div class="articleMetadata">
               {% if article.authors %}
                 {% for author in article.authors %}
-                <span class="articleMetadata__byline">by <a href="#">{{ author.name }}</a></span>
+                <span class="articleMetadata__byline">by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></span>
                 {% endfor %}
               {% elseif article.metadata.byline %}
               <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
