--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -36,13 +36,13 @@
       {{ article.lead|striptags|safeTruncate(160,"...") }}
   </p>
   <div class="articleMetadata">
-    {% if article.authors %}
+    {# if article.authors %}
       {% for author in article.authors %}
-      <span class="articleMetadata__byline">by <a href="#">{{ author.name }}</a></span>
+      <span class="articleMetadata__byline">by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></span>
       {% endfor %}
     {% elseif article.metadata.byline %}
     <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
-    {% endif %}
+    {% endif #}
     <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
     <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
   </div>
