--- a/views/partials/opinionsItem--small.html.twig
+++ b/views/partials/opinionsItem--small.html.twig
@@ -1,16 +1,23 @@
 {% cache 'opinionItemSmall'~class {gen: article} %}
-<article class="opinionsItem opinionsItem--small {{ class }}">
+          <article class="opinionsItem opinionsItem--small {{ class }}">
+
+            <div class="articleMetadata">
+            {% if article.authors %}
+           
+              {% for author in article.authors %}
+              <a class="opinionsItem__image opinionsItem__image--small" href="{{ url(article) }}">
+                <figure>
+                  <img src="{{ author.avatarUrl }}" alt="{{ author.name }}">
+                </figure>
+              </a>               
+              <span class="articleMetadata__byline">by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></span>
+              {% endfor %}
+            {% elseif article.metadata.byline %}
             <a class="opinionsItem__image opinionsItem__image--small" href="{{ url(article) }}">
               <figure>
                 <img src="{{ asset('theme/img/article_img/140x140.png') }}">
               </figure>
-            </a>
-            <div class="articleMetadata">
-            {% if article.authors %}
-              {% for author in article.authors %}
-              <span class="articleMetadata__byline">by <a href="#">{{ author.name }}</a></span>
-              {% endfor %}
-            {% elseif article.metadata.byline %}
+            </a>            
             <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
             {% endif %}
             </div>
