--- a/views/partials/opinionsItem.html.twig
+++ b/views/partials/opinionsItem.html.twig
@@ -1,23 +1,27 @@
 {% cache 'opinionItem'~class {gen: article} %}
 <article class="opinionsItem {{class}}">
-            <a class="opinionsItem__image" href="{{url(article)}}">
-              <figure>
-                <img src="{{ asset('theme/img/article_img/140x140.png') }}">
-              </figure>
-
+            <a class="opinionsItem__image" href="{{ url(article) }}">
               {% if article.authors %}
+
                 {% for author in article.authors %}
-                <span class="opinions__author">by <a href="#">{{ author.name }}</a></span>
+                <figure>
+                  <img src="{{ author.avatarUrl }}" alt="{{ author.name }}">
+                </figure>                
+                <span class="opinions__author">by {{ author.name }}</span>
                 {% endfor %}
               {% elseif article.metadata.byline %}
-              <span class="opinions__author">by <a href="#">{{ article.metadata.byline }}</a></span>
+              <figure>
+                <img src="{{ asset('theme/img/article_img/140x140.png') }}">
+              </figure>              
+              <span class="opinions__author">by {{ article.metadata.byline }}</span>
               {% endif %}
 
             </a>
             <a href="{{url(article)}}">
               <h3 class="opinionsItem__headline">{{article.title}}</h3>
             </a>
-            <p class="opinionsItem__text">{% if foo is empty %}
+            <p class="opinionsItem__text">
+                  {% if article.lead is empty %}
                     {{ article.body|striptags|safeTruncate(200,"...") }}
                   {%else%}
                     {{ article.lead|striptags|safeTruncate(200,"...") }}
