--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -286,7 +286,7 @@
     $(function() {
       $('.weather-temperature').openWeather({
         key: 'ffccf64d91c2144d8018e8c5fc4a2e0d',
-        city: 'Belgrade',
+        city: 'Prague',
         units: 'c',
         descriptionTarget: '.weather-description',
         minTemperatureTarget: '.weather-min-temperature',
