--- a/views/partials/articleListSmall__item.html.twig
+++ b/views/partials/articleListSmall__item.html.twig
@@ -2,14 +2,14 @@
 <article class="articleListSmall__item">
 
   {% if article.featureMedia %}
-    {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380' } %}
+    {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
       {% set rend610 = path(rendition) %}
       {% set imgCaption = article.featureMedia.description %}
     {% endgimme %}
   {% else %}
     {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
       {% set imgCaption = media.body %}
-      {% gimme rendition with { media: media, 'name': '610x380' } %}
+      {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
            {% set rend610 = path(rendition) %}
       {% endgimme %}
     {% endgimmelist %}
