--- a/views/partials/breaking-news.html.twig
+++ b/views/partials/breaking-news.html.twig
@@ -1,20 +1,20 @@
 {# cache 'topArticle'~gimme.route.slug~article.id {gen: article} #}
 
   {% if article.featureMedia %}
-    {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380' } %}
+    {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
       {% set rend610 = path(rendition) %}
       {% set imgCaption = article.featureMedia.description %}
     {% endgimme %}
-    {% gimme rendition with { 'media': article.featureMedia, 'name': '1250x600' } %}
+    {% gimme rendition with { 'media': article.featureMedia, 'name': '1250x600', 'fallback': 'original' } %}
       {% set rend1250 = path(rendition) %}
     {% endgimme %}
   {% else %}
     {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
       {% set imgCaption = media.body %}
-      {% gimme rendition with { media: media, 'name': '610x380' } %}
+      {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
            {% set rend610 = path(rendition) %}
       {% endgimme %}
-      {% gimme rendition with {media: media,  'name': '1250x600' } %}
+      {% gimme rendition with {media: media,  'name': '1250x600', 'fallback': 'original' } %}
            {% set rend1250 = path(rendition) %}
       {% endgimme %}
     {% endgimmelist %}
