--- a/views/partials/mainArticleList.html.twig
+++ b/views/partials/mainArticleList.html.twig
@@ -4,20 +4,20 @@
             <figure class="mainArticleList__image {% if image =='small' %}mainArticleList__image--small{% endif %} ">
 
   {% if article.featureMedia %}
-    {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380' } %}
+    {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
       {% set rend610 = path(rendition) %}
       {% set imgCaption = article.featureMedia.description %}
     {% endgimme %}
-    {% gimme rendition with { 'media': article.featureMedia, 'name': '1250x600' } %}
+    {% gimme rendition with { 'media': article.featureMedia, 'name': '1250x600', 'fallback': 'original' } %}
       {% set rend1250 = path(rendition) %}
     {% endgimme %}
   {% else %}
     {% gimmelist media from articleMedia|limit(1) with {'article': article} %}
       {% set imgCaption = media.body %}
-      {% gimme rendition with { media: media, 'name': '610x380' } %}
+      {% gimme rendition with { media: media, 'name': '610x380', 'fallback': 'original' } %}
            {% set rend610 = path(rendition) %}
       {% endgimme %}
-      {% gimme rendition with {media: media,  'name': '1250x600' } %}
+      {% gimme rendition with {media: media,  'name': '1250x600', 'fallback': 'original' } %}
            {% set rend1250 = path(rendition) %}
       {% endgimme %}
     {% endgimmelist %}
