--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -152,7 +152,7 @@
     </div>
   </div>
 
-  <header class="header">
+  {# <header class="header"> #}
 
     <div class="container">
 
@@ -168,7 +168,7 @@
         </div>
 
         {% block logo %}
-        <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
+        <div class="verticalMiddle col-sm-1 col-xs-10">
           <a class="header__logo" href="/"><img src="{{ themeLogo(asset('/public/img/logo.png')) }}"></a>
         </div>
         {% endblock %}
