--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -154,13 +154,13 @@
 
         <div class="verticalMiddle col-2">
           <p class="header__weather row text-center justify-content-center">
-          <div>
             <span class="weather-temperature col-12"></span>
             <span class="header__weather__info col-12">
               <span class="weather-place"></span> <br>
               <span class="weather-description"></span>
             </span>
-          <img src="" class="weather-icon" alt="Weather Icon" /></p>
+          <img src="" class="weather-icon" alt="Weather Icon" />
+          </p>
         </div>
 
         {% block logo %}
