--- a/views/partials/breaking-news.html.twig
+++ b/views/partials/breaking-news.html.twig
@@ -21,7 +21,7 @@
   {% endif %}
 
     <div class="row">
-      <div class="gallery gallery__breakingNews marginBottom30 col-xs-12">
+      <div class="gallery gallery__breakingNews marginBottom30 col-12">
         <figure class="gallery__image">
           <a class="gallery__strip" href="{{ path(article.route) }}">Breaking news</a>
           <a href="{{ path(article) }}">
