change home grid

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -187,7 +187,7 @@
 
 {% container 'mainNav' %}
 
-Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu1.html.twig 
+{#Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu1.html.twig  #}
 
 {% endcontainer %}
 
