--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -27,7 +27,7 @@
 		<div class="row">
 			<div class="col-md-9 col-sm-12 col-xs-12">
 				<div class="row">
-					<div class="col-md-8 col-sm-12 col-xs-12 pull-right">
+					<div class="col-12">
         				{% include 'partials/mainArticle.html.twig' with { 'article': item.content } %}
         				<div class="articleGrid row">
 		{% endif %}        		
@@ -47,10 +47,13 @@
     {% endif %}
 	{% endgimmelist %}
 	{% endcache %}
+				</div>
 
-					</div>
+				</div>
+			</div>
 
-					<div class="leftCol col-md-4 col-sm-12 col-xs-12 pull-right">
+			<div class="col-xs-12 col-sm-12 col-md-3">
+       					<div class="leftCol col-12">
 						<div class="leftCol__item">
 							<div class="articleListSmall articleListSmall--latestNews marginBottom30">
 								<h3 class="sectionHeading">Latest news</h3>
@@ -67,11 +70,6 @@
 						{% endcontainer %}
 						
 					</div>
-				</div>
-			</div>
-
-			<div class="col-xs-12 col-sm-12 col-md-3">
-
 				{% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
 
 				<div class="subscribe subscribe--banner marginBottom30">
